--- a/NaturalColors.html
+++ b/NaturalColors.html
@@ -286,7 +286,7 @@
                 </ul>
                 <br>
             </div>
-                <a href="ContactUs.html" class="request-button" style="margin-top: 30 px; margin-bottom: 30 px;">Contact Us!</a>
+                <a href="ContactUs.html" class="request-button" style="margin-top: 30 px;">Contact Us!</a>
                 <br>
             </div>
         </div>
