--- a/NaturalColors.html
+++ b/NaturalColors.html
@@ -284,9 +284,8 @@
                     <li><a href="#">Annatto extract</a></li>
                     <li><a href="#">Beta Carotene</a></li>
                 </ul>
-                <br>
             </div>
-                <a href="ContactUs.html" class="request-button" style="margin-top: 30 px;">Contact Us!</a>
+                <a href="ContactUs.html" class="request-button" style="margin-bottom: 30px; margin-top: 30px;">Contact Us!</a>
                 <br>
             </div>
         </div>
