--- a/Annatto.html
+++ b/Annatto.html
@@ -67,7 +67,7 @@
         /* Sample/Contact Button */
         .request-button {
             display: inline-block;
-            padding: calc(1em + 0.5vw) calc(2em + 1vw); /* Padding scales with screen size */
+            padding: calc(1em - 0.5vw) calc(1em + 0.5vw); /* Padding scales with screen size */
             font-size: clamp(16px, 1.5vw, 20px); /* Font size scales between 14px and 20px */
             font-weight: bold;
             color: white;
