--- a/Annatto.html
+++ b/Annatto.html
@@ -39,7 +39,8 @@
             flex: 0 0 45%; /* Non-fixed width for the text box */
             order: 1; /* Default order for text on the left */
             overflow-y: auto; 
-            margin-right: 0.5in; 
+            margin-right: 0.5in;
+            margin-left: 0.5in; 
         }
 
         .left-box p {
@@ -119,6 +120,7 @@
             .left-box {
                 order: 2; /* Ensure text appears below the image */
                 margin-right: 0; 
+                margin-left: 0;
                 overflow-y: visible; /* Ensure text scrolls normally */
             }
 
