--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body {font-family: "Lato", sans-serif}
       <div class="dropdown">
         <a href="javascript:void(0)" class="dropdown-toggle w3-bar-item w3-button w3-padding-large" onclick="toggleDropdown('IngredientsDropdown')">Ingredients <i class="fa fa-caret-down"></i></a>
         <div id="IngredientsDropdown" class="dropdown-menu">
-          <a href="NaturalVsSynthetic.html" class="w3-bar-item w3-button w3-padding-large">Natural vs Synthetic</a>
+          <a href="NaturalVsSynthetic.html" class="w3-bar-item w3-button">Natural vs Synthetic</a>
           <a href="NaturalColors.html" class="w3-bar-item w3-button">Natural Colors</a>
           <a href="Annatto.html" class="w3-bar-item w3-button">Annatto</a>
           <a href="Beet.html" class="w3-bar-item w3-button">Beet</a>
