--- a/Annatto.html
+++ b/Annatto.html
@@ -81,7 +81,6 @@
             transition: background-color 0.3s ease, transform 0.2s ease;
             cursor: pointer;
             margin-bottom: 30px;
-            margin-right: 30px;
         }
     
         /* Button Hover Effect */
@@ -125,6 +124,7 @@
             }
 
             .title-section h1 {
+                font-size: 32px; /* Slightly smaller title */
                 text-align: center; /* Center the text horizontally */
                 margin: 0 auto; /* Ensure it's centered in its container */
                 transform: translateY(-10px); /* Move title up slightly */
@@ -143,7 +143,7 @@
                 height: auto; 
                 margin-top: 10px; /* Add spacing above */
                 margin-bottom: 10px; /* Add spacing below */
-                max-width: 70vw; /* Make image slightly smaller on mobile */
+                max-width: 80vw; /* Make image slightly smaller on mobile */
             }
         }
     </style>
