--- a/Annatto.html
+++ b/Annatto.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 
     <style>
         /* General Reset */
@@ -66,7 +66,6 @@
             align-items: center; /* Center horizontally within the container */
       
         }
-
 
         /* Sample/Contact Button */
         .request-button {
@@ -210,19 +209,19 @@
           <div class="dropdown">
             <a href="javascript:void(0)" class="dropdown-toggle w3-bar-item w3-button w3-padding-large" onclick="toggleDropdown('InformationDropdown')">Information <i class="fa fa-caret-down"></i></a>
             <div id="InformationDropdown" class="dropdown-menu">
-              <a href="ourstory.html" class="w3-bar-item w3-button w3-padding-large">Our Story</a>
-              <a href="staff.html" class="w3-bar-item w3-button w3-padding-large">Staff</a>
-              <a href="FAQ.html" class="w3-bar-item w3-button w3-padding-large">FAQ</a>
-              <a href="Partners.html" class="w3-bar-item w3-button w3-padding-large">Partners</a>
-              <a href="PrivacyNotice.html" class="w3-bar-item w3-button w3-padding-large">Privacy Notice</a>
-              <a href="Regulations.html" class="w3-bar-item w3-button w3-padding-large">Regulation And Labeling</a>
+              <a href="ourstory.html" class="w3-bar-item w3-button">Our Story</a>
+              <a href="staff.html" class="w3-bar-item w3-button">Staff</a>
+              <a href="FAQ.html" class="w3-bar-item w3-button">FAQ</a>
+              <a href="Partners.html" class="w3-bar-item w3-button">Partners</a>
+              <a href="PrivacyNotice.html" class="w3-bar-item w3-button">Privacy Notice</a>
+              <a href="Regulations.html" class="w3-bar-item w3-button">Regulation And Labeling</a>
             </div>
           </div>
           <!-- Ingredients Dropdown -->
           <div class="dropdown">
             <a href="javascript:void(0)" class="dropdown-toggle w3-bar-item w3-button w3-padding-large" onclick="toggleDropdown('IngredientsDropdown')">Ingredients <i class="fa fa-caret-down"></i></a>
             <div id="IngredientsDropdown" class="dropdown-menu">
-              <a href="NaturalVsSynthetic.html" class="w3-bar-item w3-button w3-padding-large">Natural vs Synthetic</a>
+              <a href="NaturalVsSynthetic.html" class="w3-bar-item w3-button">Natural vs Synthetic</a>
               <a href="NaturalColors.html" class="w3-bar-item w3-button">Natural Colors</a>
               <a href="Annatto.html" class="w3-bar-item w3-button">Annatto</a>
               <a href="Beet.html" class="w3-bar-item w3-button">Beet</a>
@@ -255,7 +254,6 @@
           <p>
             It is hard to believe that the rich golden color of cheddar cheese actually comes from a plant. This orange-yellow color, called annatto, is extracted from the seed coats of a tropical tree, <i>Bixa orellano</i>. The tree has heart-shaped leaves and small pink to white flowers bearing pods, which on maturing, contain hundreds of rust-colored seeds. The rust-colored resinous material surrounding the seed is the source of annatto. The chemical name for the color principle of annatto is Bixin.
           </p>
-
           <h2 style="color: #e21b22;">Preparation:</h2>
           <p>
               Annatto is available commercially in oil-soluble and water-soluble forms, depending on the method of extraction and subsequent preparation into dilutions, suspensions, mixtures, emulsions and powders. It is usually purchased on the basis of bixin content.
@@ -303,7 +301,7 @@
 
         <!-- Right Flexbox: Image -->
         <div class="right-box">
-            <img src="Images/annatto.jpg" alt="Example Image">
+            <img src="Images/annatto.jpg" alt="Annatto Seeds">
         </div>
 
     </div>
