--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@ body {font-family: "Lato", sans-serif}
       <div class="dropdown">
         <a href="javascript:void(0)" class="dropdown-toggle w3-bar-item w3-button w3-padding-large" onclick="toggleDropdown('InformationDropdown')">Information <i class="fa fa-caret-down"></i></a>
         <div id="InformationDropdown" class="dropdown-menu">
-          <a href="ourstory.html" class="w3-bar-item w3-button w3-padding-large">Our Story</a>
-          <a href="staff.html" class="w3-bar-item w3-button w3-padding-large">Staff</a>
-          <a href="FAQ.html" class="w3-bar-item w3-button w3-padding-large">FAQ</a>
-          <a href="Partners.html" class="w3-bar-item w3-button w3-padding-large">Partners</a>
-          <a href="PrivacyNotice.html" class="w3-bar-item w3-button w3-padding-large">Privacy Notice</a>
-          <a href="Regulations.html" class="w3-bar-item w3-button w3-padding-large">Regulation And Labeling</a>
+          <a href="ourstory.html" class="w3-bar-item w3-button">Our Story</a>
+          <a href="staff.html" class="w3-bar-item w3-button">Staff</a>
+          <a href="FAQ.html" class="w3-bar-item w3-button">FAQ</a>
+          <a href="Partners.html" class="w3-bar-item w3-button">Partners</a>
+          <a href="PrivacyNotice.html" class="w3-bar-item w3-button">Privacy Notice</a>
+          <a href="Regulations.html" class="w3-bar-item w3-button">Regulation And Labeling</a>
         </div>
       </div>
       <!-- Ingredients Dropdown -->
@@ -272,9 +272,6 @@ body {font-family: "Lato", sans-serif}
 <!-- End Page Content -->
 </div>
 
-<!-- Place holder for map location -->
-<img src="" class="w3-image w3-greyscale-min" style="width:100%">
-
 <!-- ColorGarden Logo at the Bottom of the Page -->
 <div class="logo-container">
   <a href="https://colorgarden.net">
@@ -282,11 +279,10 @@ body {font-family: "Lato", sans-serif}
   </a>
 </div>
 
-
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
   <p class="w3-medium">Copyright colorMaker, Inc. 2025</a></p>
-  <p class="w3-medium">Designed by Mel's Studio   -   Built by Smith Software</a></p>
+  <p class="w3-medium">Design by Mel's Studio   -   Built by Smith Software</a></p>
 </footer>
 
 <script src="main.js"></script>
