--- a/Annatto.html
+++ b/Annatto.html
@@ -105,7 +105,7 @@
             max-width: 40vw; /* Scale the image dynamically based on viewport width */
             height: auto; /* Maintain aspect ratio */
             border-radius: 8px; /* Optional: rounded corners */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* subtle shadow */
+            /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); Optional subtle shadow */
         }
 
         /* Responsive Design for Mobile */
