--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 <link rel="stylesheet" href="w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 <style>
 body {font-family: "Lato", sans-serif}
 </style>
 </head>
 <body>
 
-<!-- Desktop Navbar -->
-<div class="w3-top">
+ <!-- Desktop Navbar -->
+ <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="toggleNav()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
@@ -37,23 +38,23 @@ body {font-family: "Lato", sans-serif}
       <button class="w3-padding-large w3-button" title="More">Ingredients <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
         <a href="NaturalVsSynthetic.html" class="w3-bar-item w3-button">Natural vs Synthetic</a>
-          <a href="NaturalColors.html" class="w3-bar-item w3-button">Natural Colors</a>
-          <a href="Annatto.html" class="w3-bar-item w3-button">Annatto</a>
-          <a href="Beet.html" class="w3-bar-item w3-button">Beet</a>
-          <a href="Beta-Carotene.html" class="w3-bar-item w3-button">Beta-Carotene</a>
-          <a href="Caramel.html" class="w3-bar-item w3-button">Caramel</a>
-          <a href="Carmine.html" class="w3-bar-item w3-button">Carmine</a>
-          <a href="Grape.html" class="w3-bar-item w3-button">Grape</a>
-          <a href="Paprika.html" class="w3-bar-item w3-button">Paprika</a>
-          <a href="Saffron.html" class="w3-bar-item w3-button">Saffron</a>
-          <a href="Turmeric.html" class="w3-bar-item w3-button">Turmeric</a>
-          <a href="Chlorophyll.html" class="w3-bar-item w3-button">Chlorophyll</a>
-          <a href="Lycopene.html" class="w3-bar-item w3-button">Lycopene</a>
-          <a href="TitaniumDioxide.html" class="w3-bar-item w3-button">Titanium Dioxide</a>
-          <a href="PurpleCarrot.html" class="w3-bar-item w3-button">Purple Carrot & Purple Sweet Potato</a>
-          <a href="RedCabbage.html" class="w3-bar-item w3-button">Red Cabbage & Red Raddish</a>
-          <a href="IronOxide.html" class="w3-bar-item w3-button">Iron Oxide</a>
-          <a href="Spirulina.html" class="w3-bar-item w3-button">Spirulina</a>
+        <a href="NaturalColors.html" class="w3-bar-item w3-button">Natural Colors</a>
+        <a href="Annatto.html" class="w3-bar-item w3-button">Annatto</a>
+        <a href="Beet.html" class="w3-bar-item w3-button">Beet</a>
+        <a href="Beta-Carotene.html" class="w3-bar-item w3-button">Beta-Carotene</a>
+        <a href="Caramel.html" class="w3-bar-item w3-button">Caramel</a>
+        <a href="Carmine.html" class="w3-bar-item w3-button">Carmine</a>
+        <a href="Grape.html" class="w3-bar-item w3-button">Grape</a>
+        <a href="Paprika.html" class="w3-bar-item w3-button">Paprika</a>
+        <a href="Saffron.html" class="w3-bar-item w3-button">Saffron</a>
+        <a href="Turmeric.html" class="w3-bar-item w3-button">Turmeric</a>
+        <a href="Chlorophyll.html" class="w3-bar-item w3-button">Chlorophyll</a>
+        <a href="Lycopene.html" class="w3-bar-item w3-button">Lycopene</a>
+        <a href="TitaniumDioxide.html" class="w3-bar-item w3-button">Titanium Dioxide</a>
+        <a href="PurpleCarrot.html" class="w3-bar-item w3-button">Purple Carrot & Purple Sweet Potato</a>
+        <a href="RedCabbage.html" class="w3-bar-item w3-button">Red Cabbage & Red Raddish</a>
+        <a href="IronOxide.html" class="w3-bar-item w3-button">Iron Oxide</a>
+        <a href="Spirulina.html" class="w3-bar-item w3-button">Spirulina</a>
       </div>
     </div>
   </div>
@@ -68,7 +69,7 @@ body {font-family: "Lato", sans-serif}
       <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
       <a href="SampleRequest.html" class="w3-bar-item w3-button w3-padding-large">Sample Request</a>
       <a href="ContactUs.html" class="w3-bar-item w3-button w3-padding-large">Contact</a>
-
+    
       <!-- Information Dropdown -->
       <div class="dropdown">
         <a href="javascript:void(0)" class="dropdown-toggle w3-bar-item w3-button w3-padding-large" onclick="toggleDropdown('InformationDropdown')">Information <i class="fa fa-caret-down"></i></a>
