--- a/Annatto.html
+++ b/Annatto.html
@@ -271,7 +271,7 @@
             <h1>Annatto</h1>
           </div>
           <p>
-            It is hard to believe that the rich golden color of cheddar cheese actually comes from a plant. This orange-yellow color, called annatto, is extracted from the seed coats of a tropical tree, <i>Bixa orellano</i>. The tree has heart-shaped leaves and small pink to white flowers bearing pods, which on maturing, contain hundreds of rust-colored seeds. The rust-colored resinous material surrounding the seed is the source of annatto. The chemical name for the color principle of annatto is Bixin.
+            It is hard to believe that the rich golden color of cheddar cheese actually comes from a plant. This orange-yellow color, called annatto, is extracted from the seed coats of a tropical tree, <i>Bixa orellana</i>. The tree has heart-shaped leaves and small pink to white flowers bearing pods, which on maturing, contain hundreds of rust-colored seeds. The rust-colored resinous material surrounding the seed is the source of annatto. The chemical name for the color principle of annatto is Bixin.
           </p>
           <h2 style="color: #e21b22;">Preparation:</h2>
           <p>
