--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ body {font-family: "Lato", sans-serif}
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
     <a href="SampleRequest.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Sample Request</a>
     <a href="ContactUs.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
+    <a href="" class="w3-bar-item w3-padding-dynamic w3-hide-small"></a> <!-- Note: this is a spacer -->
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">Information <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -131,8 +132,8 @@ body {font-family: "Lato", sans-serif}
       <h2 class="w3-wide w3-middle-align">Food And Beverage</h2>
       <div class="parent-container">
         <div class="small-spline-left w3-left-align">
-          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.0.94/build/spline-viewer.js" loading="eager"></script>
-          <spline-viewer url="https://prod.spline.design/8f6QSFzTPjGRV3bp/scene.splinecode" loading="eager"></spline-viewer>
+          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js"></script>
+          <spline-viewer url="https://prod.spline.design/8f6QSFzTPjGRV3bp/scene.splinecode"></spline-viewer>
         </div>
       </div>
       <div class="w3-content w3-middle-align w3-padding-32">
@@ -153,8 +154,8 @@ body {font-family: "Lato", sans-serif}
       <h2 class="w3-wide w3-right-align">Personal Care Products</h2>
       <div class="parent-container">
         <div style="padding-left: 50px;" class="small-spline-personal-care w3-right-align">
-          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.0.94/build/spline-viewer.js" loading="eager"></script>
-          <spline-viewer url="https://prod.spline.design/nPPTGBnuz7yFMRTq/scene.splinecode" loading="eager"></spline-viewer>
+          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js"></script>
+          <spline-viewer url="https://prod.spline.design/nPPTGBnuz7yFMRTq/scene.splinecode"></spline-viewer>
         </div>
       </div>
       <div class="w3-content w3-left-align w3-padding-32">
@@ -175,7 +176,7 @@ body {font-family: "Lato", sans-serif}
       <h2 class="w3-wide w3-left-align">Nutritional Supplements</h2>
       <div class="parent-container">
         <div class= "small-spline-left w3-left-align">
-          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.0.94/build/spline-viewer.js" loading="eager"></script>
+          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js" loading="eager"></script>
           <spline-viewer url="https://prod.spline.design/LFWbj1I0QWCG6Ygh/scene.splinecode" loading="eager"></spline-viewer>
         </div>
       </div>
@@ -197,7 +198,7 @@ body {font-family: "Lato", sans-serif}
       <h2 class="w3-wide w3-right-align">Pet Food And Treats</h2>
       <div class="parent-container">
         <div class= "small-spline-pet-food w3-right-align">
-          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.0.94/build/spline-viewer.js" loading="eager"></script>
+          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js" loading="eager"></script>
           <spline-viewer url="https://prod.spline.design/9X6pCzGMZ3kbOIm1/scene.splinecode" loading="eager"></spline-viewer>
         </div>
       </div>
@@ -219,7 +220,7 @@ body {font-family: "Lato", sans-serif}
       <h2 class="w3-wide w3-left-align">Edible Inks</h2>
       <div class="parent-container">
         <div class= "small-spline-left w3-left-align">
-          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.0.94/build/spline-viewer.js" loading="eager"></script>
+          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js" loading="eager"></script>
           <spline-viewer url="https://prod.spline.design/HoBcIpWuxrkBK5Lb/scene.splinecode" loading="eager"></spline-viewer>
         </div>
       </div>
@@ -241,7 +242,7 @@ body {font-family: "Lato", sans-serif}
       <h2 class="w3-wide w3-right-align">And Anything Else!</h2>
       <div class="parent-container">
         <div class= "small-spline-other w3-right-align">
-          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.0.94/build/spline-viewer.js" loading="eager"></script>
+          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js" loading="eager"></script>
           <spline-viewer url="https://prod.spline.design/dad9cqYJZMoCT04r/scene.splinecode" loading="eager"></spline-viewer>
         </div>
       </div>
