--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-content" style="max-width:800px">
       <h2 class="w3-wide w3-right-align">Personal Care Products</h2>
       <div class="parent-container">
-        <div style="padding-left: 50px;" class="small-spline-personal-care w3-right-align">
+        <div class="small-spline-personal-care w3-right-align">
           <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js"></script>
-          <spline-viewer url="https://prod.spline.design/nPPTGBnuz7yFMRTq/scene.splinecode"></spline-viewer>
+          <spline-viewer url="https://prod.spline.design/24ggjL8doZTmcr7S/scene.splinecode"></spline-viewer>
         </div>
       </div>
       <div class="w3-content w3-left-align w3-padding-32">
