--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ body {font-family: "Lato", sans-serif}
       <h2 class="w3-wide w3-middle-align">Food And Beverage</h2>
       <div class="parent-container">
         <div class="small-spline-left w3-left-align">
-          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js"></script>
-          <spline-viewer url="https://prod.spline.design/8f6QSFzTPjGRV3bp/scene.splinecode"></spline-viewer>
+          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js" loading="eager"></script>
+          <spline-viewer url="https://prod.spline.design/8f6QSFzTPjGRV3bp/scene.splinecode" loading="eager"></spline-viewer>
         </div>
       </div>
       <div class="w3-content w3-middle-align w3-padding-32">
@@ -154,8 +154,8 @@ body {font-family: "Lato", sans-serif}
       <h2 class="w3-wide w3-right-align">Personal Care Products</h2>
       <div class="parent-container">
         <div class="small-spline-personal-care w3-right-align">
-          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js"></script>
-          <spline-viewer url="https://prod.spline.design/24ggjL8doZTmcr7S/scene.splinecode"></spline-viewer>
+          <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js" loading="eager"></script>
+          <spline-viewer url="https://prod.spline.design/24ggjL8doZTmcr7S/scene.splinecode" loading="eager"></spline-viewer>
         </div>
       </div>
       <div class="w3-content w3-left-align w3-padding-32">
