Semi-final draft of entire site

--- a/Annatto.html
+++ b/Annatto.html
@@ -320,7 +320,7 @@
 
         <!-- Right Flexbox: Image -->
         <div class="right-box">
-            <img src="Images/annatto.jpg" alt="Annatto Seeds">
+            <img src="Images/1 Annatto composed.jpg" alt="Annatto Seeds">
         </div>
 
     </div>
