--- a/Beet.html
+++ b/Beet.html
@@ -303,7 +303,7 @@
 
         <!-- Right Flexbox: Image -->
         <div class="right-box">
-            <img src="Images/beet.jpg" alt="Beets">
+            <img src="Images/2 Beet Composed_2.jpg" alt="Beets">
         </div>
 
     </div>
