--- a/Beta-Carotene.html
+++ b/Beta-Carotene.html
@@ -299,7 +299,7 @@
 
         <!-- Right Flexbox: Image -->
         <div class="right-box">
-            <img src="Images/beta carotene.jpg" alt="Beta Carotene">
+            <img src="Images/3 Beta Carotene Composed.jpg" alt="Beta Carotene">
         </div>
 
     </div>
