--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ body {font-family: "Lato", sans-serif}
       <h2 class="w3-wide w3-middle-align">Food And Beverage</h2>
       <div class="parent-container">
         <div class="small-spline-left w3-left-align">
+          <!-- Do Not forget the loading="eager" attribute when updating this Spline content! -->
           <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js" loading="eager"></script>
           <spline-viewer url="https://prod.spline.design/8f6QSFzTPjGRV3bp/scene.splinecode" loading="eager"></spline-viewer>
         </div>
