--- a/index.html
+++ b/index.html
@@ -272,16 +272,35 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
   
+</div>
+
 <!-- End Page Content -->
+
+<div class="logo-container" id="logoContainer">
+  <img src="Images/colorGardenLogo.jpg" class="w3-image w3-greyscale-min logo-image" alt="ColorGarden Logo" onclick="showContainer()">
 </div>
 
-<!-- ColorGarden Logo at the Bottom of the Page -->
-<div class="logo-container">
-  <a href="https://colorgarden.net">
-    <img src="Images/colorGardenLogo.jpg" class="w3-image w3-greyscale-min logo-image" alt="ColorGarden Logo">
-  </a>
+<div class="container" id="infoContainer">
+<div class="content">
+    <div class="column home-bakers">
+        <h2>HOME BAKERS</h2>
+        <p>If you are a consumer interested in using natural food colors, please see our retail site at:</p>
+        <p><a href="http://www.colorgarden.net" target="_blank">www.colorgarden.net</a></p>
+    </div>
+    <div class="column store-owners">
+        <h2>STORE OWNERS</h2>
+        <p>Interested in selling Color Garden to your customers?</p>
+        <p>Contact our marketing manager Dan Wegrzyn for a list of distributors.</p>
+        <p>714.572.0444 x105</p>
+    </div>
+    <div class="column color-garden">
+        <h2>COLOR GARDEN WAS DEVELOPED BY COLORMaker, INC.</h2>
+        <p>Custom natural color blends for use in food, beverage, cosmetic, and nutritional products.</p>
+        <p>Follow this link to the sample request page at:</p>
+        <p><a href="http://www.colormaker.com" target="_blank">www.colormaker.com</a></p>
+    </div>
 </div>
-
+</div>
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
