--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@ body {font-family: "Lato", sans-serif}
   <img src="Images/colorGardenLogo.jpg" class="w3-image w3-greyscale-min logo-image" alt="ColorGarden Logo" onclick="showContainer()">
 </div>
 
-<div class="container" id="infoContainer">
-<div class="content">
+<div class="container-popup" id="infoContainer">
+<div class="content-popup">
     <div class="column home-bakers">
         <h2>HOME BAKERS</h2>
         <p>If you are a consumer interested in using natural food colors, please see our retail site at:</p>
